# OECD_Labor_Market_Analysis

./: .dockerignore  .env  .gitignore  Readme.md  ada_attivita_cp2021_graph.html  ada_attivita_graph.html  docker-compose.yml  init.sql  profili_comp_graph.html  pyproject.toml
notebooks/: graph_creation.ipynb  graph_creation_ada.ipynb  lightast_prep.ipynb  rtc_prep.ipynb
notebooks/.devcontainer/: devcontainer.json
outputs/: ada_attivita_sep_graph.html  ada_attivita_sep_graph_fast.html  codice_ada_codice_cp2021_graph.html  neo4j_import.cypher
