[project]
name = "oecd-calabria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.8.2",
    "fastexcel>=0.19.0",
    "googletrans==4.0.0rc1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pyvis>=0.3.2",
    "scipy>=1.17.0",
]
